change default pawn into blueprint class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/StarterContent/Maps/Minimal_Default.Minimal_Default
 GameDefaultMap=/Game/Levels/StarterContent/Maps/Minimal_Default.Minimal_Default
-GlobalDefaultGameMode="/Script/Escape.EscapeGameMode"
+GlobalDefaultGameMode=/Game/MyEscapeGameModeBase_BP.MyEscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
